--- a/Convert Cube to CHGCAR.ipynb
+++ b/Convert Cube to CHGCAR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,74 +13,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_cube_data(cube_file):\n",
-    "        with open(cube_file, 'r') as f:\n",
+    "    with open(cube_file, 'r') as f:\n",
     "            cube_data = f.readlines()\n",
     "\n",
-    "        natoms = int(cube_data[2].split()[0])\n",
+    "    # Number of atoms, origin, FFT grid size and voxel dimensions\n",
+    "    natoms = int(cube_data[2].split()[0])\n",
+    "    origin = np.array([cube_data[2].split()[1], cube_data[2].split()[2], cube_data[2].split()[3]], dtype='float64')\n",
+    "    N = np.array([cube_data[3].split()[0], cube_data[4].split()[0], cube_data[5].split()[0]], dtype='int64')\n",
+    "    dV = np.array([[cube_data[3].split()[1], cube_data[3].split()[2], cube_data[3].split()[3]],\n",
+    "                [cube_data[4].split()[1], cube_data[4].split()[2], cube_data[4].split()[3]],\n",
+    "                [cube_data[5].split()[1], cube_data[5].split()[2], cube_data[5].split()[3]]], dtype='float64')\n",
     "\n",
-    "        N = np.zeros((3))\n",
-    "        dV = np.zeros((3,3))\n",
-    "        \n",
+    "    # Convert from Bohr to Angstroms (uncomment if required)\n",
+    "    # dV *= 0.529177249\n",
     "\n",
-    "        for i in range(3,6):\n",
-    "            line = cube_data[i].split()\n",
-    "            N[i-3] = int(line[0])\n",
-    "            for j in range(1,4):\n",
-    "                dV[i-3][j-1] = float(line[j])\n",
-    "        \n",
-    "        dV *= 0.529177 #Convert from Bohr to Angstroms\n",
-    "        V = np.array([N[i]*dV[i] for i in range(3)])\n",
+    "    # Volume of a grid\n",
+    "    dvolume =  np.dot(dV[0], np.cross(dV[1], dV[2]))\n",
     "\n",
-    "        density_data = []\n",
-    "        for i in range(6+natoms,len(cube_data)):\n",
-    "            density_data.extend([float(part) for part in cube_data[i].split()])\n",
+    "    # Read density data as a numpy array\n",
+    "    density_data = np.loadtxt(cube_file, skiprows=6+natoms)\n",
     "\n",
-    "        N = np.array(N, dtype=int)\n",
-    "        grid = np.zeros((N[0], N[1], N[2], 3))\n",
-    "        density = np.zeros((N[0], N[1], N[2]))\n",
-    "        for i in range(N[0]):\n",
-    "            for j in range(N[1]):\n",
-    "                for k in range(N[2]):\n",
-    "                    grid[i, j, k] = i*dV[0] + j*dV[1] + k*dV[2]\n",
-    "                    density[i, j, k] = density_data[i+j+k]\n",
-    "\n",
-    "        return grid, density, V\n",
+    "    # The way charges are stored in a cube file with innermost loop on z and outermost on x\n",
+    "    density_data = density_data.reshape((N[0], N[1], N[2]), order='C')\n",
     "    \n",
-    "def write_CHGCAR(path, structure_file, cube_file):\n",
+    "    # Charge contained in a grid\n",
+    "    charge_data = density_data*dvolume\n",
     "    \n",
-    "    pw_path = path + '/pw.in'\n",
-    "    cube_path = path + '/si_rho.cube'\n",
-    "    chgcar_path = path + '/CHGCAR'\n",
+    "    return charge_data\n",
+    "    \n",
+    "def write_CHGCAR(structure_file, cube_file, chgcar_file):\n",
     "    \n",
     "    write('temp_POSCAR', read(structure_file), format='vasp')\n",
     "    \n",
-    "    grid, density, V = get_cube_data(cube_file)\n",
-    "    Nx, Ny, Nz = grid.shape[0], grid.shape[1], grid.shape[2]\n",
-    "    density *= np.linalg.det(V)\n",
+    "    charge_data = get_cube_data(cube_file)\n",
+    "\n",
+    "    Nx, Ny, Nz = charge_data.shape[0], charge_data.shape[1], charge_data.shape[2]\n",
     "    \n",
     "    with open('temp_POSCAR', 'r') as f:\n",
     "        poscar_lines = f.readlines()\n",
     "    \n",
-    "    with open(chgcar_path, 'w') as f:\n",
+    "    with open(chgcar_file, 'w') as f:\n",
     "        for i in range(len(poscar_lines)):\n",
     "            f.write(poscar_lines[i])\n",
     "            \n",
     "        f.write('\\n')\n",
     "        \n",
-    "        f.write('  %s  %s  %s' % (Nx, Ny, Nz))\n",
+    "        f.write(f'   {Nx}   {Ny}   {Nz}')\n",
     "        f.write('\\n')\n",
     "        count = 0\n",
+    "\n",
+    "        # The way charges are stored in CHGCAR, innermost loop on x, outermost on z\n",
     "        for k in range(Nz):\n",
     "            for j in range(Ny):\n",
     "                for i in range(Nx):\n",
-    "                    f.write('    %s' % density[i,j,k])\n",
+    "                    f.write(f' {charge_data[i, j, k]*Nx*Ny*Nz:.12f}')\n",
     "                    count += 1\n",
-    "                    if count % 10 == 0:\n",
+    "                    if count % 5 == 0:\n",
     "                        f.write('\\n')\n",
     "    \n",
     "        f.write('\\n')\n",
@@ -112,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
