Added scientific notation

--- a/Convert Cube to CHGCAR.ipynb
+++ b/Convert Cube to CHGCAR.ipynb
@@ -71,7 +71,7 @@
     "        for k in range(Nz):\n",
     "            for j in range(Ny):\n",
     "                for i in range(Nx):\n",
-    "                    f.write(f' {charge_data[i, j, k]*Nx*Ny*Nz:.12f}')\n",
+    "                    f.write(f' {charge_data[i, j, k]*Nx*Ny*Nz:0.11e}')\n",
     "                    count += 1\n",
     "                    if count % 5 == 0:\n",
     "                        f.write('\\n')\n",
